# dl-course

./: .gitignore  PHASE1-COMPLETE.md  PHASE1-ENHANCEMENT-CHECKPOINT.md  PHASE1-FOUNDATION-COMPLETE.md  PHASE1_CHECKPOINT.md  PHASE1_COMPLETE.md  README.md  astro.config.mjs  build.sh  package-lock.json  package.json
.github/workflows/: wasm-build.yml
docs/: PHASE2_RECOMMENDATIONS.md
docs/plans/: course_improvement_plan.md  course_improvement_plan_v2.md
docs/superpowers/plans/: 2026-04-18-ch2-ch3-progressive-demos.md  (+1 more)
public/trajectories/: gaussian-mixture-adam-lr0.01.json  gaussian-mixture-adam-lr0.05.json  gaussian-mixture-sgd-lr0.05.json  gaussian-mixture-sgd-lr0.1.json  problems.json  quadratic-bowl-adam-lr0.001.json  quadratic-bowl-adam-lr0.01.json  quadratic-bowl-adam-lr0.05.json  quadratic-bowl-sgd-lr0.01.json  quadratic-bowl-sgd-lr0.05.json  quadratic-bowl-sgd-lr0.1.json  rosenbrock-adam-lr0.001.json  rosenbrock-adam-lr0.01.json  rosenbrock-sgd-lr0.0001.json  rosenbrock-sgd-lr0.001.json  spiral-adam-lr0.01.json  spiral-adam-lr0.05.json  spiral-sgd-lr0.05.json  spiral-sgd-lr0.1.json
public/wasm/: framework.js  framework.wasm
src/: content.config.ts
src/components/: APIReference.astro  CodeSnippet.astro  PrevNext.astro  SidebarNav.astro  WasmDemo.astro
src/content/: config.ts
src/diagrams/: AutodiffDiagram.astro  GradientDescentDiagram.astro  MNISTLossCurve.astro  autodiff-canvas.js  gradient-descent-canvas.js  mnist-loss-canvas.js
src/layouts/: LessonLayout.astro
src/pages/: 404.astro  index.astro
src/styles/: global.css
src/types/: window.d.ts
wasm-src/: CMakeLists.txt  lstm_inference.cpp  modules_wasm.cpp  ops_wasm.cpp  tensor_wasm.cpp  transformer_inference.cpp
(+51 files in other folders)
